--- a/app/pages/business_support_loan/index.njk
+++ b/app/pages/business_support_loan/index.njk
@@ -11,7 +11,7 @@
 {# Breadcrumb #}
 {% set breadcrumb = [
   {
-    text: "セゾンインボイス",
+    text: "ビジネスサポートローン",
     link: "#"
   }
 ] %}
@@ -61,14 +61,14 @@
       <div class="section-welcome-info">
         <div class="section-welcome-info-left">
           <div class="section-welcome__inner">
-            <h3 class="ttl-tertiary">カード会員様向けのおすすめローンサービス</h3>
+            <h3 class="ttl-tertiary">カード会員向けのおすすめローンサービス</h3>
           </div>
           <div class="section-welcome__title">
             <h1 class="ttl-primary">ビジネスサポートローン</h1>
           </div>
           <div class="section-welcome__desc">
             <h5 class="ttl-quaternary">まとまった資金を低金利で。<br/>
-              中小企業様・個人事業主様向けローンサービス
+              中小企業・個人事業主向けローンサービス
             </h5>
           </div>
           <div class="btn-action">
@@ -96,10 +96,10 @@
     </section>
 
     <section id="loan-support" class="section-card-support fadein">
-      <h2 class="ttl-secondary">本サービスは以下いずれかのカードをお持ちの会員様向けのサービスです。</h2>
+      <h2 class="ttl-secondary">本サービスは以下いずれかのカードをお持ちの会員向けのサービスです。</h2>
 
       <div class="card-support-list">
-        <a class="card-support-detail">
+        <a class="card-support-detail" href="/platinum_business">
           <div class="card-support-detail__img">
             <img src="/assets/img/credit_cards/american-express-01.png"/>
           </div>
@@ -114,7 +114,7 @@
             <img src="/assets/img/credit_cards/american-express-02.png"/>
           </div>
           <div class="card-content">
-            <h3 class="ttl-quaternary">セゾンプラチナ・ビジネス・アメリカン・エキスプレス®・カード</h3>
+            <h3 class="ttl-quaternary">セゾンコバルト・ビジネス・アメリカン・エキスプレス®・カード</h3>
             <button class="green_btn">詳細はこちら</button>
           </div>
         </a>
@@ -125,7 +125,7 @@
 
     <section id="loan-support" class="section-primary fadein">
       <h4 class="ttl-quaternary">セゾンビジネスサポートローンとは</h4>
-      <h2 class="ttl-primary">このような中小企業様・個人事業主様にピッタリのサービスです。</h2>
+      <h2 class="ttl-primary">中小企業・個人事業主にピッタリのサービスです。</h2>
       <span class="section-primary__description">お持ちのビジネスカードに、<strong>最大950万円のゆとりあるご融資可能枠</strong>とお借り入れ額に応じた<strong>優遇金利</strong>をご用意しております。</span>
       <div class="section-primary__wrapper">
         <div class="containers">
@@ -262,7 +262,7 @@
                 </div>
                 <div class="ttl-quaternary-container">
                   <h4 class="ttl-quaternary">
-                    設備投資や<br/>仕入れ資金の調達に
+                    低金利で資金の調達に
                   </h4>
                 </div>
               </a>
@@ -370,7 +370,7 @@
             <div href="#" class="card">
               <summary class="card__box">
                 <div class="card__box--ttl">今すぐお申し込みをしたい</br>という方はこちら</div>
-                <div><a class="blue_gradient_btn" href="https://www.a-q-f.com/openpc/directLogin.do?yyy=60" target="_blank">審査おお申し込み</a></div>
+                <div><a class="blue_gradient_btn" href="https://www.a-q-f.com/openpc/directLogin.do?yyy=60" target="_blank">審査お申し込み</a></div>
               </summary>
             </div>
           </div>
