--- a/app/pages/cospro/index.njk
+++ b/app/pages/cospro/index.njk
@@ -131,7 +131,7 @@
 
   <section class="section-octonary">
     <div class="containers">
-      <h4 class="ttl-primary">このようなお悩みをお持ちの企業様向けのサービスです。</h4>
+      <h4 class="ttl-primary">このようなお悩みをお持ちの企業向けのサービスです。</h4>
       <div class="grid-card-containers">
         <a class="card" href="#worry1">
           <div class="card-head">お悩み①</div>
@@ -188,7 +188,7 @@
     </div>
   </section>
 
-  <section class="section-senary">
+  <section id="cospro-feature" class="section-senary">
     <div class="containers">
       <h4 class="ttl-tertiary">CosProの特長</h4>
       <h2 class="ttl-primary">出張手配の問題、すべて解決いたします!</h2>
@@ -201,7 +201,7 @@
         <div class="step-arrow">{% include 'component/icons/step-arrow.njk' %} </div>
         <div class="ttl-secondary">適正化チェックで出張コストを抑制!</div>
         <div class="ttl-quinary">
-          社員様からのご予約を同じ条件でさらに安く手配できないか、取り間違いがないかなど当社のトラベルマネージャーがチェックを行い、問題がないものをご予約完了とするサービスです。ノウハウをもった「人」でないと解決できない独自のスキームです。
+          社員の方がとった予約を同じ条件でさらに安く手配できないか、取り間違いがないかなど当社のトラベルマネージャーがチェックを行い、問題がないものをご予約完了とするサービスです。ノウハウをもった「人」でないと解決できない独自のスキームです。
         </div>
 
         <ul class="step-list">
@@ -229,7 +229,7 @@
             </div>
 
             <div class="card-description">
-              社員様の手配内容は、データ管理システムからダウンロードすることができるので、経理データとしてご活用いただけます。もちろん、<span class="font-bold">予約システム・データ管理システムも無償</span>でご利用いただけます。
+              社員の手配内容は、データ管理システムからダウンロードすることができるので、経理データとしてご活用いただけます。もちろん、<span class="font-bold">予約システム・データ管理システムも無償</span>でご利用いただけます。
             </div>
           </div>
 
@@ -243,7 +243,7 @@
             </div>
 
             <div class="card-description">
-              コールセンターは年中無休!出張の移動中やちょっとした <span class="font-bold">空き時間に、数分で出張の予約や変更が行えます。</span>  社員様一人ひとりに出張手配における秘書がいる感覚でご利用いただけます。
+              コールセンターは年中無休!出張の移動中やちょっとした <span class="font-bold">空き時間に、数分で出張の予約や変更が行えます。</span>  社員の方一人ひとりに出張手配における秘書がいる感覚でご利用いただけます。
             </div>
           </div>
 
@@ -264,7 +264,7 @@
         <div class="ttl-secondary"><div class="text-underline"> 出張状況をデータ化・可視化。</div> ガバナンスを強化できます。</div>
 
         <div class="ttl-quinary">
-          社員様からのご予約を同じ条件でさらに安く手配できないか、取り間違いがないかなど当社のトラベルマネージャーがチェックを行い、問題がないものをご予約完了とするサービスです。ノウハウをもった「人」でないと解決できない独自のスキームです。
+          社員の方からのご予約を同じ条件でさらに安く手配できないか、取り間違いがないかなど当社のトラベルマネージャーがチェックを行い、問題がないものをご予約完了とするサービスです。ノウハウをもった「人」でないと解決できない独自のスキームです。
         </div>
 
         <div class="grid-card-containers">
@@ -288,14 +288,14 @@
     </div>
   </section>
 
-  <section class="section-septenary">
+  <section id="membership" class="section-septenary">
     <div class="containers">
       <h4 class="ttl-tertiary">法人カード会員特典</h4>
-      <h2 class="ttl-primary">クレディセゾンの法人向けカード会員様限定の特典をご用意しています。</h2>
+      <h2 class="ttl-primary">クレディセゾンの法人向けカード会員限定の特典をご用意しています。</h2>
 
       <div class="notice-board">
         <div class="board-head">
-          クレディセゾン発行の法人向けカード会員様限定優待
+          クレディセゾン発行の法人向けカード会員限定優待
         </div>
         <div class="board-container">
           <div class="board-icon">
@@ -320,7 +320,7 @@
     </div>
   </section>
 
-  <section class="section-quinary">
+  <section id="flow-usage" class="section-quinary">
     <div class="containers">
       <h5 class="ttl-tertiary">ご利用までの流れ</h5>
       <h1 class="ttl-primary">ご利用開始まで営業担当がフォローいたします。</h1>
@@ -358,7 +358,7 @@
         </li>
         <li class="flow-item">
           <div class="flow-item-detail">
-            <div class="ttl-head">社員様へのご通知  <br> ご予約開始</div>
+            <div class="ttl-head">社員のご通知  <br> ご予約開始</div>
             <div class="flow-image">
               <img src="/assets/img/cospro/step4.png" alt="work image" class="card-img">
             </div>
