--- a/app/pages/payment_com/index.njk
+++ b/app/pages/payment_com/index.njk
@@ -69,7 +69,7 @@ link: "#material"
         <div class="section-welcome-info-left">
           <div class="title-notice">
             <div class="title-content">
-              <span class="yellow-txt">中小企業様</span>のための、
+              <span class="yellow-txt">中小企業</span>のための、
               <br />
               新たな<span class="yellow-txt">資金繰り改善策</span>が登場！
             </div>
@@ -123,7 +123,7 @@ link: "#material"
   <section id="payment" class="section-primary fadein">
     <div class="container-1000">
       <div class="ttl-notice">支払い.comとは</div>
-      <h1 class="ttl-primary">中小企業様向けの「第三の資金繰り改善策」です。</h1>
+      <h1 class="ttl-primary">中小企業向けの「第三の資金繰り改善策」です。</h1>
       <h4 class="ttl-quaternary">
         請求書払いをカードで先のばし。振り込みはお任せ！<br />
         <span class="font-weight-normal">期限の迫った請求書も、支払いまで最長60日余裕をプラス。資金繰りを改善し、借りずに事業を加速できます。</span>
@@ -134,7 +134,7 @@ link: "#material"
 
   <section id="payment" class="section-secondary fadein">
     <div class="container-1200">
-      <h1 class="ttl-primary">このようなお悩みをお持ちの企業様向けのサービスです。</h1>
+      <h1 class="ttl-primary">このようなお悩みをお持ちの企業向けのサービスです。</h1>
       <div class="section-secondary-content">
         <div class="flex gap30">
           <div class="card">
@@ -283,7 +283,7 @@ link: "#material"
     <div class="ttl-notice">選ばれる理由</div>
     <h1 class="ttl-primary">サービス開始1年で、導入企業数20,000社突破！<span>※1</span></h1>
     <h4 class="ttl-quaternary">
-      個人事業主様から1,000名を超える規模の法人様まで、選ばれるのには理由があります。
+      個人事業主から1,000名を超える規模の法人まで、選ばれるのには理由があります。
     </h4>
 
     <div class="section-primary__wrapper">
@@ -409,7 +409,7 @@ link: "#material"
                     支払い.comのサービス資料をダウンロートできます。フォーム入力後リアルタイムでお送りいたします。
                   </div>
                 </div>
-                <div><a href="https://shi-harai.com/signup/" class="blue_gradient_btn" target="_blank">今すぐ無料で登録</a></div>
+                <div><a href="https://shi-harai.com/signup/" class="blue_gradient_btn" target="_blank">サービス資料ダウンロード</a></div>
               </summary>
           </div>
           <div href="#" class="card">
@@ -423,7 +423,7 @@ link: "#material"
                     支払い.comのサービス資料をダウンロートできます。フォーム入力後リアルタイムでお送りいたします。
                   </div>
                 </div>
-              <div><a href="https://shi-harai.com/signup/" target="_blank" class="blue_gradient_btn" href="#">審査お申し込み</a></div>
+              <div><a href="https://shi-harai.com/signup/" target="_blank" class="blue_gradient_btn" href="#">今すぐ無料で登録　に修正</a></div>
             </summary>
           </div>
         </div>
