--- a/app/pages/saison_invoice/index.njk
+++ b/app/pages/saison_invoice/index.njk
@@ -180,7 +180,7 @@
       </div>
     </section>
 
-    <section id="feature"  class="section-secondary fadein">
+    <section class="section-secondary fadein">
       <div class="container">
         <h4 class="ttl-secondary">セゾンインボイスの仕組み</h4>
         <h2 class="ttl-primary">顧客・取引データを入力したら、あとはお任せ下さい。</h2>
@@ -193,7 +193,7 @@
     </section>
 
     <section class="section-tertiary fadein">
-      <h2 class="ttl-primary">このようなお悩みをお持ちの企業様向けのサービスです。</h2>
+      <h2 class="ttl-primary">このようなお悩みをお持ちの企業向けのサービスです。</h2>
       <div class="list__wrapper">
         <div class="containers">
           <ul class="inherit card-list">
@@ -271,10 +271,6 @@
             <h4 class="act-more-tooltip__content">{{"セゾンインボイスの仕組みとメリットが\n3分でわかる！" | safe}}</h4>
           </div>
           <div class="act-more-content">
-            <div class="act-more-content-img">
-              <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
-              <img class="secondary-img" src="/assets/img/common/documents_image.png" alt="Documents image 2">
-            </div>
             <div class="act-more-content-btn">
               <a href="#" class="blue_gradient_btn small">
                 サービス資料ダウンロード
