--- a/app/pages/saison_welfare/index.njk
+++ b/app/pages/saison_welfare/index.njk
@@ -77,7 +77,7 @@ link: "#material"
         <div class="section-welcome-info-left">
           <div class="title-notice">
             <h3 class="title-content">
-              中小企業様の経営を支援する福利厚生サービス
+              中小企業の経営を支援する福利厚生サービス
             </h3>
           </div>
           <h1 class="ttl-primary">セゾンフクリコ</h1>
@@ -113,12 +113,12 @@ link: "#material"
     </div>
   </section>
 
-  <section class="section-primary fadein">
+  <section id="payment" class="section-primary fadein">
     <div class="container-1200">
       <h5 class="ttl-notice">セゾンフクリコとは</h5>
-      <h1 class="ttl-primary">中小企業様のための福利厚生優待サービスです。</h1>
+      <h1 class="ttl-primary">中小企業のための福利厚生優待サービスです。</h1>
       <h4 class="ttl-quaternary">
-        従業員のエンゲージメント向上のために福利厚生を導入したいという中小企業様向け
+        従業員のエンゲージメント向上のために福利厚生を導入したいという中小企業向け
         <span class="font-weight-normal">の福利厚生優待サービスです。</span>
       </h4>
       <div class="section-primary-wrapper">
@@ -175,7 +175,7 @@ link: "#material"
           </ul>
           <div class="jumbotron_welfare_service">
             <a href="#">
-              <h3 class="ttl-quaternary">このような中小企業様にピッタリの福利厚生サービスです。</h3>
+              <h3 class="ttl-quaternary">このような中小企業にピッタリの福利厚生サービスです。</h3>
               <ul class="jumbotron_welfare_service_content">
                 <li>
                   <div>{% include 'component/icons/blue-tick.njk' %}</div>
@@ -205,7 +205,7 @@ link: "#material"
             </div>
             <div class="saison-introduce-description">
               <h5 class="ttl-quinary bold">【サービス紹介動画（43秒）】</h5>
-              <h4 class="ttl-quaternary">事業者様向け福利厚生サービス「セゾンフクリコ」</h4>
+              <h4 class="ttl-quaternary">事業者向け福利厚生サービス「セゾンフクリコ」</h4>
               <p class="ttl-quinary">セゾンフクリコでできることを、動画でご紹介します。</p>
             </div>
           </div>
@@ -232,7 +232,7 @@ link: "#material"
     </div>
   </section>
 
-  <section class="section-quaternary fadein">
+  <section id="flow-of-usage" class="section-quaternary fadein">
     <h5 class="ttl-notice">セゾンフクリコの特長</h5>
     <h1 class="ttl-primary">従業員はもちろん、会社にもうれしい福利厚生サービスです。</h1>
     <div class="container">
@@ -352,7 +352,7 @@ link: "#material"
           <h1 class="card-solution-title">新たな業務が増える心配はありません。</h1>
           <ul class="card-solution-content__text">
             <li>「セゾンフクリコ」なら、施設などとの直接契約業務や、設備投資・運営はすべて完全アウトソーシングなので</li>
-            <li>導入事業者様に業務をご負担いただく必要はございません。</li>
+            <li>導入事業者の方に業務をご負担いただく必要はございません。</li>
           </ul>
         </li>
         <li id="feature3" class="card-type25">
@@ -364,14 +364,14 @@ link: "#material"
           <h1 class="card-solution-title">ご利用料金は、<span>月額385円（税込）/1人～</span></h1>
           <ul class="card-solution-content__text">
             <li>お手頃な月会費で、はじめての福利厚生導入でも気軽に利用できる料金プランです。法人向け/個人事業主向けプランをご用意しています。</li>
-            <li> 詳しい料金プランを知りたい方は <a href="#">サービス資料をダウンロード</a>してご覧ください。</li>
+            <li> 詳しい料金プランを知りたい方は <a href="#">リンク箇所を下線・青文字で。</a>してご覧ください。</li>
           </ul>
         </li>
       </ul>
     </div>
   </section>
 
-  <section class="section-quinary fadein">
+  <section id="reason-chosing" class="section-quinary fadein">
     <div class="ttl-notice">法人向け優待サポート</div>
     <h1 class="ttl-primary">経費削減・業務効率を上げる法人向けのサポートも充実</h1>
 
@@ -497,12 +497,12 @@ link: "#material"
     </div>
   </section>
 
-  <section class="section-senary fadein">
+  <section id="faq" class="section-senary fadein">
     <div class="container">
       <h5 class="ttl-notice">ご利用までの流れ</h5>
       <h1 class="ttl-primary">ご利用開始までは３ステップのみ。</h1>
       <h4 class="ttl-quaternary">
-        従業員様のID発行後、すぐにサービスをご利用頂けます。
+        従業員のID発行後、すぐにサービスをご利用頂けます。
       </h4>
 
       <ul class="flow-container">
@@ -524,7 +524,7 @@ link: "#material"
         </li>
         <li class="flow-item">
           <div class="flow-item-detail">
-            <h5 class="ttl-tertiary bold">従業員様ID発行・<br /> ご利用開始</h5>
+            <h5 class="ttl-tertiary bold">従業員ID発行・<br /> ご利用開始</h5>
             <div class="flow-item-image">
               <img src="/assets/img/saison_welfare/flow1.png">
             </div>
@@ -543,7 +543,7 @@ link: "#material"
     </div>
   </section>
 
-  <section class="section-question-and-answer fadein">
+  <section id="material" class="section-question-and-answer fadein">
     <div class="container">
       <h5 class="ttl-sub">FAQ</h5>
       <h2 class="ttl-secondary">よくある質問</h2>
