--- a/app/pages/welfare/index.njk
+++ b/app/pages/welfare/index.njk
@@ -286,7 +286,7 @@
     <div class="container-1200">
       <h2 class="ttl-secondary">ご利用はわずか月額385円（税込）〜 / 1アカウント</h2>
 
-      <h3 class="ttl-tertiary">ご法人様向け/個人事業主様向けプランをご用意しています。</h3>
+      <h3 class="ttl-tertiary">法人向け/個人事業主向けプランをご用意しています。</h3>
 
       <div class="section-img">
         <img src="/assets/img/common/img-welfare-icon-001.png" alt="">
@@ -305,7 +305,7 @@
       <h3 class="ttl-tertiary"><span><strong>従業員の満足度</strong>を高めて<strong>人材が定着する会社</strong>に</span>
         <div class="tooltip">
           <div class="tooltip-container">
-            <h4 class="tooltip__content">{{"法定外福利厚生サービスをご検討中の \n 事業者様へ" | safe}}</h4>
+            <h4 class="tooltip__content">{{"法定外福利厚生サービスをご検討中の \n 事業者の方へ" | safe}}</h4>
           </div>
         </div>
       </h3>
