--- a/app/assets/scss/4-pages/_business_support_loan.scss
+++ b/app/assets/scss/4-pages/_business_support_loan.scss
@@ -39,7 +39,6 @@
     .ttl-primary {
       font-size: 32px;
       margin-bottom: 40px;
-      text-shadow: 0px 0px 20px #05172c8d;
       @media #{$sp} {
         font-size: 24px;
         margin-bottom: 20px;
@@ -356,7 +355,7 @@
           }
         }
 
-        button {
+        a {
           width: 100%;
           margin: auto;
         }
