--- a/app/pages/platinum_business/index.njk
+++ b/app/pages/platinum_business/index.njk
@@ -147,10 +147,6 @@ link: "#top"
         <a href="" class="blue_gradient_btn">お申し込みはこちら</a>
       </div>
 
-      <div class="sub-content">
-        ※申込み時にフォームにて、決算内容の入力は必要です。決算内容がわかるものをご用意をお願いいたします。
-      </div>
-
 
     </div>
   </section>
@@ -166,8 +162,8 @@ link: "#top"
           </div>
           <div class="col-right">
             <div class="ttl-quaternary">22,000円（税込） 追加カード年会費：3,300円（税込）</div>
-            <div class="ttl-quaternary normal-text">年会費は会計上経費として計上可能です。詳しくは税理士等にご確認ください。 <br>
-              年間200万円以上のショッピングのご利用で、次年度本会員年会費を11,000円（税込）に優遇いたします。</div>
+            <div class="ttl-quaternary normal-text">年間200万円以上のショッピングのご利用で、次年度本会員年会費を11,000円（税込）に優遇いたします。<br>
+              年会費は会計上経費として計上可能です。詳しくは税理士等にご確認ください。</div>
           </div>
         </div>
 
@@ -176,7 +172,7 @@ link: "#top"
             入会資格
           </div>
           <div class="col-right">
-            <div class="ttl-quaternary">個人事業主様・経営者様をはじめ、安定した収入があり、<br> 社会的信用を有するご連絡可能な方（学生、未成年を除く）</div>
+            <div class="ttl-quaternary">個人事業主・経営者様をはじめ、安定した収入があり、<br> 社会的信用を有するご連絡可能な方（学生、未成年を除く）</div>
           </div>
         </div>
       </div>
@@ -197,7 +193,7 @@ link: "#top"
           </div>
           <div class="card-content">
             <h4 class="ttl-quaternary">国内空港ラウンジ</h4>
-            <div class="ttl-normal">国内の主要空港ラウンジを無料でご利用いただけます。ご搭乗までのひとときを、ゆったりとお過ごしください。従業員様のカードもご利用いただけます。</div>
+            <div class="ttl-normal">国内の主要空港ラウンジを無料でご利用いただけます。ご搭乗までのひとときを、ゆったりとお過ごしください。従業員のカードもご利用いただけます。</div>
           </div>
         </div>
 
@@ -208,7 +204,7 @@ link: "#top"
           <div class="card-content">
             <h4 class="ttl-quaternary">海外空港ラウンジ</h4>
             <div class="ttl-normal">
-              148以上の国や地域、1,300ヵ所以上の空港ラウンジをご利用いただける「プライオリティ・パス（通常年会費469米ドル／プレステージ会員）」に代表者様カード限定の特別なサービスとして無料でご登録いただけます。
+              148以上の国や地域、1,300ヵ所以上の空港ラウンジをご利用いただける「プライオリティ・パス（通常年会費469米ドル／プレステージ会員）」に代表者カード限定の特別なサービスとして無料でご登録いただけます。
             </div>
           </div>
         </div>
@@ -249,9 +245,9 @@ link: "#top"
             <img src="/assets/img/common/plat1.png" alt="work image">
           </div>
           <div class="card-content">
-            <h4 class="ttl-quaternary">従業員様も対象の旅行傷害保険</h4>
+            <h4 class="ttl-quaternary">従業員も対象の旅行傷害保険</h4>
             <div class="ttl-normal">
-              海外・国内の旅行中の事故について補償いたします。海外旅行中の事故について最高１億円※1まで、国内旅行中の事故について最高5,000万円※2まで補償いたします。代表者様はもちろん追加カードを発行された従業員様も対象となります。
+              海外・国内の旅行中の事故について補償いたします。海外旅行中の事故について最高１億円※1まで、国内旅行中の事故について最高5,000万円※2まで補償いたします。代表の方はもちろん追加カードを発行された従業員の方も対象となります。
             </div>
           </div>
         </div>
@@ -268,7 +264,7 @@ link: "#top"
   <section id="usage" class="section-octonary">
     <div class="containers">
       <h4 class="ttl-primary">ご利用シーン</h4>
-      <h2 class="ttl-quaternary">起業から事業成長まで、あらゆるビジネスシーンをサポート。経費管理から資金管理、会食や出張で役立つサービスなど、 個人事業主様や経営者にゆとりと安心を提供する一枚です。
+      <h2 class="ttl-quaternary">起業から事業成長まで、あらゆるビジネスシーンをサポート。経費管理から資金管理、会食や出張で役立つサービスなど、 個人事業主や経営者にゆとりと安心を提供する一枚です。
       </h2>
 
       <div class="grid-card-containers">
@@ -452,7 +448,7 @@ link: "#top"
                 <li>プラチナ会員専用デスク</li>
                 <li>AMEXセンチュリオンデザイン採用</li>
                 <li>支払いサイト 最長84日間※1</li>
-                <li>通常429米ドルのプライオリティパスを代表者様は無料で ご登録可能</li>
+                <li>通常429米ドルのプライオリティパスを代表者の方は無料で ご登録可能</li>
               </ul>
             </div>
           </div>
