--- a/app/pages/service/index.njk
+++ b/app/pages/service/index.njk
@@ -42,8 +42,8 @@ link:"#"
             規模別
           </div>
           <div class="right-content">
-            <a href="#" class="bondi_blue_outline_btn">個人事業主様向け</a>
-            <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
+            <a href="#" class="bondi_blue_outline_btn">個人事業主向け</a>
+            <a href="#" class="bondi_blue_outline_btn">中小企業向け</a>
           </div>
         </div>
         <div class="card-section by-purpose">
@@ -73,10 +73,10 @@ link:"#"
               セゾンプラチナ・ビジネス プロアメリカン・エキスプレス®・カード
             </div>
             <div class="description">
-              中小企業様の経営と事業成長を強力にサポートする一枚。
+              中小企業の経営と事業成長を強力にサポートする一枚。
             </div>
             <div class="list-button">
-              <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
+              <a href="#" class="bondi_blue_outline_btn">中小企業向け</a>
               <a href="#" class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
               <a href="#" class="bondi_green_outline_btn">経費を削減したい</a>
             </div>
@@ -94,7 +94,7 @@ link:"#"
               ビジネスにさらなる安心を与える一枚。
             </div>
             <div class="list-button">
-              <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
+              <a href="#" class="bondi_blue_outline_btn">中小企業向け</a>
               <a href="#" class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
               <a href="#" class="bondi_green_outline_btn">経費を削減したい</a>
             </div>
@@ -112,7 +112,7 @@ link:"#"
               効率化とコスト削減を目指すならこの一枚。
             </div>
             <div class="list-button">
-              <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
+              <a href="#" class="bondi_blue_outline_btn">中小企業向け</a>
               <a href="#" class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
               <a href="#" class="bondi_green_outline_btn">経費を削減したい</a>
             </div>
@@ -129,7 +129,7 @@ link:"#"
               個人与信型ビジネスカード
             </div>
             <div class="list-button">
-              <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
+              <a href="#" class="bondi_blue_outline_btn">個人事業主向け</a>
               <a href="#" class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
               <a href="#" class="bondi_green_outline_btn">経費を削減したい</a>
             </div>
@@ -146,7 +146,7 @@ link:"#"
               初めてのビジネスカードに。シンプルなこの一枚。
             </div>
             <div class="list-button">
-              <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
+              <a href="#" class="bondi_blue_outline_btn">中小企業向け</a>
               <a href="#" class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
               <a href="#" class="bondi_green_outline_btn">経費を削減したい</a>
             </div>
@@ -163,7 +163,7 @@ link:"#"
               毎⽉の請求業務を最短15分に短縮！未⼊⾦対応をゼロに
             </div>
             <div class="list-button">
-              <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
+              <a href="#" class="bondi_blue_outline_btn">中小企業向け</a>
               <a href="#" class="bondi_green_outline_btn">資金繰りを改善したい</a>
               <a href="#" class="bondi_green_outline_btn">業務効率化を図りたい</a>
             </div>
@@ -181,7 +181,7 @@ link:"#"
             </div>
             <div class="list-button">
               <a href="#" class="bondi_blue_outline_btn">個人事業主様向け</a>
-              <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
+              <a href="#" class="bondi_blue_outline_btn">中小企業向け</a>
               <a href="#" class="bondi_green_outline_btn">資金繰りを改善したい</a>
               <a href="#" class="bondi_green_outline_btn">業務効率化を図りたい</a>
             </div>
@@ -198,7 +198,7 @@ link:"#"
               従業員が喜ぶ優待メニューが充実!月額385円～/人で。!
             </div>
             <div class="list-button">
-              <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
+              <a href="#" class="bondi_blue_outline_btn">中小企業向け</a>
               <a href="#" class="bondi_green_outline_btn">福利厚生を充実させたい</a>
             </div>
           </div>
@@ -230,7 +230,7 @@ link:"#"
               仮払い・立替払いを廃止！経費精算を自動化できる!
             </div>
             <div class="list-button">
-              <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
+              <a href="#" class="bondi_blue_outline_btn">中小企業向け</a>
               <a href="#" class="bondi_green_outline_btn">業務効率化を図りたい</a>
             </div>
           </div>
@@ -246,7 +246,7 @@ link:"#"
               出張手配の問題をまるごと解決!
             </div>
             <div class="list-button">
-              <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
+              <a href="#" class="bondi_blue_outline_btn">中小企業向け</a>
               <a href="#" class="bondi_green_outline_btn">業務効率化を図りたい</a>
             </div>
           </div>
