fix list bug 01

--- a/app/_template/partial/top_header.njk
+++ b/app/_template/partial/top_header.njk
@@ -19,12 +19,10 @@
               <a href="/strength/" class="font-15px">クレディセゾンの強み</a>
             </li>
             <li>
-              <a href="/smaller_companies/" class="font-15px">中小企業様向け</a>
+              <a href="/smaller_companies/" class="font-15px">中小企業向け</a>
             </li>
             <li>
-              <a href="/sole_proprietorship/" class="font-15px"
-                >個人事業主様向け</a
-              >
+              <a href="/sole_proprietorship/" class="font-15px">個人事業主向け</a>
             </li>
             <li class="nav__item__dropdown__search header_menu_trigger _pc">
               <a class="font-15px"><span>目的から探す</span></a>
