--- a/app/pages/business_card_creation/index.njk
+++ b/app/pages/business_card_creation/index.njk
@@ -100,7 +100,8 @@
       <h1 class="ttl-primary">ビジネスカード一覧</h1>
 
       <div class="table-card">
-        <div class="table-card-head card-type-1">中小企業様向け（法人与信型ビジネスカード）</div>
+        <div class="table-card-head card-type-1 pc-only">中小企業向け（法人与信型ビジネスカード）</div>
+        <div class="table-card-head card-type-1 sp-only">中小企業向け <br>（法人与信型ビジネスカード）</div>
         <div class="grid-card-container">
           <div>
             <div class="title-row">
@@ -147,7 +148,7 @@
               <div class="ttl-secondary">
                 27,500円（税込）
               </div>
-              <div class="ttl-normal">セゾンプラチナ・ビジネス プロ アメリカン・エキスプレス®・カード</div>
+              <div class="ttl-normal">追加カード年会費 3,300円（税込）</div>
 
             </div>
 
@@ -207,7 +208,7 @@
             </div>
           </div>
           <div>
-            <div class="title-row">キャッシュ <br> バック 還元率</div>
+            <div class="title-row">キャッシュ <br> バック<br> 還元率</div>
             <div class="card-row">
               <div class="ttl-secondary">
                 1.0%
@@ -268,7 +269,7 @@
             </div>
           </div>
           <div>
-            <div class="title-row">詳細</div>
+            <div class="title-row">その他のサービス</div>
 
             <div class="card-row">
               <div class="card-btn card-type-1">
@@ -292,7 +293,8 @@
       </div>
 
       <div class="table-card">
-        <div class="table-card-head card-type-2">中小規模ビジネスオーナー様、個人事業主様向け（個人与信型ビジネスカード）</div>
+        <div class="table-card-head card-type-2 pc-only">中小規模ビジネスオーナー、個人事業主向け（個人与信型ビジネスカード）</div>
+        <div class="table-card-head card-type-2 sp-only">中小規模ビジネスオーナー、個人事業主向け <br>（個人与信型ビジネスカード）</div>
         <div class="grid-card-container">
           <div>
             <div class="title-row">
@@ -326,9 +328,10 @@
 
             <div class="card-row">
               <div class="ttl-secondary">
-                22,000円（税込） <br> <span class="ttl-normal">初年度年会費無料 2年目以降は22,000円（税込）</span>
+              22,000円（税込） <br> <span class="ttl-normal">初年度無料<br> 
+              <strong>2</strong>年目以降<strong>22,000</strong>円（税込）<strong>/</strong> 年会費優遇</span>
               </div>
-              <div class="ttl-normal">追加カード年会費 3,300円（税込）</div>
+              <div class="ttl-normal">追加カード年会費 <strong> 3,300 </strong>円（税込）</div>
 
             </div>
 
@@ -410,7 +413,7 @@
             </div>
           </div>
           <div>
-            <div class="title-row">詳細</div>
+            <div class="title-row">その他のサービス</div>
 
             <div class="card-row">
               <div class="card-btn card-type-2">
@@ -442,7 +445,7 @@
             <div class="circle-child first">
             </div>
             <div class="normal-child">
-              JALの利用が多いのでマイルを貯めたい
+            JALの利用が多いので<br>マイルを貯めたい
             </div>
           </div>
 
@@ -468,7 +471,7 @@
             <div class="circle-child second">
             </div>
             <div class="normal-child">
-              公共料金や税金、広告費など経費の支払いで利用したい
+             広告費や税金、サーバー費用<br>など事業費の支払いで利用し<br>たい
             </div>
           </div>
 
@@ -517,7 +520,7 @@
             <div class="circle-child third">
             </div>
             <div class="normal-child">
-              確定申告が面倒なので 楽にしたい
+             確定申告に備えて<br>支払いを一元管理したい
             </div>
           </div>
 
@@ -561,7 +564,7 @@
       <div class="card-list">
         <div class="card-list-left">
           <div class="card-list-head left">
-            中小企業様向け <br />（法人与信型ビジネスカード）
+            中小企業向け <br />（法人与信型ビジネスカード）
           </div>
           <div class="card-list-grid left">
             <div class="card-detail">
@@ -601,13 +604,13 @@
         </div>
         <div class="card-list-right">
           <div class="card-list-head right">
-            中小規模ビジネスオーナー様、個人事業主様向け <br />（個人与信型ビジネスカード）
+            中小規模ビジネスオーナー、個人事業主向け <br />（個人与信型ビジネスカード）
           </div>
 
           <div class="card-list-grid right">
             <div class="card-detail">
-              <div class="card-head">セゾンコバルト・ビジネス・ アメリカン・エキスプレス® ・カード</div>
-              <img src="/assets/img/credit_cards/american-express-02.png" alt="Your Image" class="credit-card-img" />
+              <div class="card-head">セゾンプラチナ・ビジネス・アメリカン・エキスプレス®・カード</div>
+              <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image" class="credit-card-img" />
               <div>
                 <label class="custom-checkbox">
                   <input type="checkbox">
@@ -617,8 +620,8 @@
               </div>
             </div>
             <div class="card-detail">
-              <div class="card-head">セゾンプラチナ・ビジネス・アメリカン・エキスプレス®・カード</div>
-              <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image" class="credit-card-img" />
+              <div class="card-head">セゾンコバルト・ビジネス・ アメリカン・エキスプレス® ・カード</div>
+              <img src="/assets/img/credit_cards/american-express-02.png" alt="Your Image" class="credit-card-img" />
               <div>
                 <label class="custom-checkbox">
                   <input type="checkbox">
@@ -697,7 +700,7 @@
 
       <div class="card-list-grid">
         <div class="col-left col">
-          <div class="card-header left">個人事業主・中小企業経営者様の場合</div>
+          <div class="card-header left">個人事業主・中小企業経営者の場合</div>
           <div class="card-list">
             <div class="card">
               <div class="img-container">
@@ -738,7 +741,7 @@
           </div>
         </div>
         <div class="col-right col">
-          <div class="card-header right">中小企業様向けの場合</div>
+          <div class="card-header right">中小企業向けの場合</div>
           <div class="card-list">
             <div class="card">
               <div class="img-container">
@@ -788,7 +791,7 @@
         <div class="ttl-notice">CONTACT</div>
         <h3 class="ttl-tertiary">「今すぐ相談したい」という方へ</h3>
 
-        <div class="ttl-tertiary small">当社のサポート担当がご利用用途やご要望をおうかがいさせていただき、<br> お客様にピッタリのカードをご提案いたします。お気軽にご相談ください。</div>
+        <div class="ttl-tertiary small">当社のサポート担当がご利用用途やご要望をお伺い　に修正<br> お客様にピッタリのカードをご提案いたします。お気軽にご相談ください。</div>
 
         <div class="quinary-btn">
           <a href="/contact" class="blue_gradient_btn">サポート担当に無料で相談する</a>
