--- a/app/pages/faq/index.njk
+++ b/app/pages/faq/index.njk
@@ -119,7 +119,7 @@
             <div href="/contact/" class="card">
               <summary class="card__box">
                 <div class="card__box--ttl">ご相談・お問い合わせはこちら</div>
-                <div class="card__box--txt">中小企業様や個人事業主様のよくある課題に対して解決のヒントに<br>
+                <div class="card__box--txt">中小企業や個人事業主のよくある課題に対して解決のヒントに<br>
                 なる資料を無料でご提供しています。ぜひご活用ください。  
                 </div>
                 <div><a class="blue_gradient_btn" href="/contact/">お気軽にお問い合わせください。</a></div>
