--- a/app/pages/news_list/index.njk
+++ b/app/pages/news_list/index.njk
@@ -159,7 +159,7 @@ link:"#"
             <div href="#" class="card">
               <summary class="card__box">
                 <div class="card__box--ttl">お役立ち資料ダウンロード</div>
-                <div class="card__box--txt">中小企業様や個人事業主様のよくある課題に対して解決のヒントに
+                <div class="card__box--txt">中小企業や個人事業主のよくある課題に対して解決のヒントに
                   <br>
                   なる資料を無料でご提供しています。ぜひご活用ください。
                 </div>
