--- a/app/pages/strength/index.njk
+++ b/app/pages/strength/index.njk
@@ -10,7 +10,7 @@
 
 {# Breadcrumb #}
 {% set breadcrumb = [{
-  text:"当社の強み",
+  text:"クレディセゾンの強み",
   link:"#"
   }] %}
 
@@ -134,7 +134,7 @@
 
         <div class="section-btn flex gap30">
           <a href="/sole_proprietorship/" class="bondi_blue_btn">
-            <span>個人事業主様向けサービス</span>
+            <span>個人事業主向けサービス</span>
 
             <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
               <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
@@ -143,7 +143,7 @@
           </a>
 
           <a href="/smaller_companies/" class="bondi_blue_btn">
-            <span>中小企業様向けサービス</span>
+            <span>中小企業向けサービス</span>
 
             <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
               <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
