--- a/app/pages/whitepaper/index.njk
+++ b/app/pages/whitepaper/index.njk
@@ -30,7 +30,7 @@
       <div class="containers">
         <h1 class="ttl-primary">お役立ち資料</h1>
 
-        <h3 class="ttl-tertiary">中小企業様・個人事業主様のよくある課題に対して解決のヒントになる資料を <br> 無料でご提供しています。是非ご活用下さい。</h3>
+        <h3 class="ttl-tertiary">中小企業・個人事業主のよくある課題に対して解決のヒントになる資料を <br> 無料でご提供しています。是非ご活用下さい。</h3>
       </div>
     </section>
 
