--- a/app/_template/partial/footer.njk
+++ b/app/_template/partial/footer.njk
@@ -43,10 +43,10 @@
               <a href="#">サービス一覧</a>
             </li>
             <li>
-              <a href="/smaller_companies/">中小企業様向けサービス</a>
+              <a href="/smaller_companies/">中小企業向けサービス</a>
             </li>
             <li>
-              <a href="/sole_proprietorship/">個人事業主様向けサービス</a>
+              <a href="/sole_proprietorship/">個人事業主向けサービス</a>
             </li>
             <li>
               <a href="/faq/">よくある質問</a>
