--- a/app/assets/scss/4-pages/_search_by_purpose.scss
+++ b/app/assets/scss/4-pages/_search_by_purpose.scss
@@ -230,6 +230,10 @@
       line-height: 46px;
       font-weight: bold;
       margin-bottom: 40px;
+
+      @media #{$sp} {
+        font-size: 20px;
+      }
     }
 
     .card-type17 {
@@ -245,6 +249,7 @@
     }
 
     .individual-business {
+      margin-top: 40px;
       box-shadow: 0px 3px 20px #00000029;
       border-radius: 3px;
 
@@ -254,12 +259,14 @@
     }
 
     .medium-sized-businesses {
-      margin-top: 40px;
       box-shadow: 0px 3px 20px #00000029;
       border-radius: 3px;
 
       .card-type17 .card__left {
         background-color: $primary-color;
+        @media #{$sp} {
+          justify-content: center;
+        }
       }
     }
 
