--- a/app/pages/sole_proprietorship/index.njk
+++ b/app/pages/sole_proprietorship/index.njk
@@ -11,7 +11,7 @@
 {# Breadcrumb #}
 {% set breadcrumb = [
   {
-    text: "個人事業主様向けサービス",
+    text: "個人事業主向けサービス",
     link: "#"
   }
 ] %}
@@ -30,17 +30,17 @@
         <img src="/assets/img/personal_page/personal_banner.png"/>
       </div>
       <div class="section-welcome__inner">
-        <h3 class="ttl-tertiary">ビジネスオーナー様の「うれしい」をご提供！</h3>
+        <h3 class="ttl-tertiary">ビジネスオーナーの「うれしい」をご提供！</h3>
       </div>
       <div class="section-welcome__title">
-        <h1 class="ttl-primary">個人事業主様向けサービス</h1>
+        <h1 class="ttl-primary">個人事業主向けサービス</h1>
       </div>
       <div>
         <a href="/catalog_list/" class="blue_gradient_btn">{{ common.button.download }}</a>
       </div>
     </section>
     <section class="section-primary">
-      <h4 class="ttl-quaternary">中小企業の経営者様・経理ご担当者様へ</h4>
+      <h4 class="ttl-quaternary">中小企業の経営者・経理ご担当者の方へ</h4>
       <h2 class="ttl-primary">こんなニーズやお悩みありませんか？</h2>
       <div class="section-primary-wrapper">
         <div class="containers">
@@ -158,7 +158,7 @@
           <div class="notification-panel2">
             <div class="relation">
               <h3 class="single__ttl">
-                <span >中小企業経営者様・個人事業主様におすすめのビジネスカード</span >
+                <span >中小企業経営者・個人事業主におすすめのビジネスカード</span >
               </h3>
               <ul class="flex gap30 card-list">
                 <li class="card-type8">
