--- a/app/assets/scss/4-pages/_payment_com.scss
+++ b/app/assets/scss/4-pages/_payment_com.scss
@@ -419,15 +419,18 @@
             }
 
             &::before {
+              bottom: -14px;
+              left: calc(50% - 2px);
               position: absolute;
-              content: "\A";
-              top: calc(100% - 1px);
-              left: calc(50% - 15px);
-              width: 0;
-              height: 0;
-              border-left: 15px solid transparent;
-              border-right: 15px solid transparent;
-              border-top: 10px solid #fff;
+              content: "";
+              width: 15px;
+              height: 15px;
+              background: $blue-color-4;
+              border: 1px solid #fff;
+              border-top: none;
+              border-left: none;
+              transform: rotate(45deg) translateX(-50%);
+              z-index: 1;
             }
           }
         }
@@ -622,15 +625,18 @@
             }
 
             &::before {
+              bottom: -14px;
+              left: calc(50% - 2px);
               position: absolute;
-              content: "\A";
-              top: calc(100% - 1px);
-              left: calc(50% - 15px);
-              width: 0;
-              height: 0;
-              border-left: 15px solid transparent;
-              border-right: 15px solid transparent;
-              border-top: 10px solid $primary-color;
+              content: "";
+              width: 15px;
+              height: 15px;
+              background: $white-color;
+              border: 1px solid $primary-color;
+              border-top: none;
+              border-left: none;
+              transform: rotate(45deg) translateX(-50%);
+              z-index: 1;
             }
           }
         }
@@ -856,7 +862,7 @@
         font-size: 16px;
         @media #{$sp} {
           text-align: center;
-         font-size: 14px;
+          font-size: 14px;
         }
       }
 
