--- a/app/assets/scss/4-pages/_welfare.scss
+++ b/app/assets/scss/4-pages/_welfare.scss
@@ -2,7 +2,6 @@
   margin: auto;
   padding: 140px 0 0px;
 
-
   .section-welcome {
     position: relative;
     min-height: 518px;
@@ -316,7 +315,6 @@
 
               .welfare-more-tooltip__content {
                 position: relative;
-                // width: fit-content;
                 font-size: 14px;
                 font-weight: 600;
                 margin-bottom: 25px;
@@ -327,6 +325,32 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
+              }
+              &::before {
+                left: -4px;
+                top: 50%;
+                position: absolute;
+                content: "";
+                width: 25px;
+                height: 25px;
+                background: white;
+                border: 1px solid transparent;
+                border-top: none;
+                border-right: none;
+                transform: rotate(45deg) translateX(-50%);
+                box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
+                z-index: 1;
+              }
+              &::after {
+                position: absolute;
+                content: "";
+                width: 40px;
+                height: 55px;
+                background-color: #fff;
+                z-index: 3;
+                left: 0;
+                top: 50%;
+                transform: translateY(-50%);
               }
             }
           }
