fix page saison_welfare

--- a/app/pages/saison_welfare/index.njk
+++ b/app/pages/saison_welfare/index.njk
@@ -34,10 +34,6 @@ text: "法人向け優待サポート",
 link: "#reason-chosing"
 },
 {
-text: "ご利用者様の声",
-link: "#comment"
-},
-{
 text: "ご利用までの流れ",
 link: "#faq"
 },
@@ -364,7 +360,7 @@ link: "#material"
           <h1 class="card-solution-title">ご利用料金は、<span>月額385円（税込）/1人～</span></h1>
           <ul class="card-solution-content__text">
             <li>お手頃な月会費で、はじめての福利厚生導入でも気軽に利用できる料金プランです。法人向け/個人事業主向けプランをご用意しています。</li>
-            <li> 詳しい料金プランを知りたい方は <a href="#">リンク箇所を下線・青文字で。</a>してご覧ください。</li>
+            <li> 詳しい料金プランを知りたい方はサービス資料をダウンロードしてご覧ください。</li>
           </ul>
         </li>
       </ul>
