--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -42,6 +42,7 @@
 @import '3-modules/thanks';
 @import '3-modules/home';
 @import '3-modules/sidebar';
+@import '3-modules/modal';
 
 
 // 4 - pages
