--- a/app/pages/sole_proprietorship/index.njk
+++ b/app/pages/sole_proprietorship/index.njk
@@ -236,7 +236,7 @@
                 必要なのはお手持ちのカードだけ。審査も書類も必要ありません。
               </dd>
               <div class="cash-flow-img">
-                <img src="/assets/img/common/cash-flow.png" alt="Your Image" class="credit-card-img"/>
+                <img id="zoomImg" src="/assets/img/common/cash-flow.png" alt="Your Image" class="credit-card-img"/>
               </div>
             </div>
             <a href="#" class="bondi_blue_outline_btn">支払い.comをもっと詳しく</a >
