--- a/app/_template/layout/default.njk
+++ b/app/_template/layout/default.njk
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
-{% include 'partial/meta.njk' %}
-{# Custom head #}
-{%- block customHead %}
-{% endblock -%}
-<script src="/assets/js/all.min.js"></script>
+  {% include 'partial/meta.njk' %}
+  {# Custom head #}
+  {%- block customHead %}
+  {% endblock -%}
+  <script src="/assets/js/all.min.js"></script>
 </head>
+
 <body class="{% if page %}{{ page }}{% endif %}">
   {% include 'partial/top_header.njk' %}
   {# Page content #}
   {%- block content %}
   {% endblock -%}
-
+  <div id="imageModal" class="modal">
+    <span class="close-modal">&times;</span>
+    <img class="modal-content" id="image-in-modal">
+    <div id="caption"></div>
+  </div>
   {% include 'partial/footer.njk' %}
   {# Custom js #}
   {%- block customJs %}
   {% endblock -%}
 </body>
+
 </html>
